tests/res/classes/error_assign_undefined_member.say

class A {
    x;
}

say obj = A();
obj.y = true; // error: Invalid index: A doesn't have member "y" and doesn't have a setter